POST /api/exhibitions/{id}/artists 오타 수정
